@@ -85,17 +85,15 @@ namespace System.Windows.Controls.Primitives {
 			set {
 				if (decrease_repeat_button == value)
 					return;
-				if (decrease_repeat_button != null) {
-					RemoveLogicalChild(decrease_repeat_button);
-					RemoveVisualChild(decrease_repeat_button);
-					visual_children.Remove(decrease_repeat_button);
-				}
+				if (decrease_repeat_button != null)
+					if (in_scroll_bar)
+						throw new IndexOutOfRangeException();
+					else
+						Utility.Hang();
 				decrease_repeat_button = value;
-				if (decrease_repeat_button != null) {
-					visual_children.Add(decrease_repeat_button);
-					AddLogicalChild(decrease_repeat_button);
-					AddVisualChild(decrease_repeat_button);
-				}
+				visual_children.Add(decrease_repeat_button);
+				AddLogicalChild(decrease_repeat_button);
+				AddVisualChild(decrease_repeat_button);
 			}
 		}
 
@@ -104,7 +102,6 @@ namespace System.Windows.Controls.Primitives {
 			set {
 				if (increase_repeat_button == value)
 					return;
-				//TODO: I need to check if DecreaseRepeatButton and Thumb behave like this.
 				if (increase_repeat_button != null)
 					if (in_scroll_bar)
 						throw new IndexOutOfRangeException();
@@ -122,17 +119,15 @@ namespace System.Windows.Controls.Primitives {
 			set {
 				if (thumb == value)
 					return;
-				if (thumb != null) {
-					RemoveLogicalChild(thumb);
-					RemoveVisualChild(thumb);
-					visual_children.Remove(thumb);
-				}
+				if (thumb != null)
+					if (in_scroll_bar)
+						throw new IndexOutOfRangeException();
+					else
+						Utility.Hang();
 				thumb = value;
-				if (thumb != null) {
-					visual_children.Add(thumb);
-					AddLogicalChild(thumb);
-					AddVisualChild(thumb);
-				}
+				visual_children.Add(thumb);
+				AddLogicalChild(thumb);
+				AddVisualChild(thumb);
 			}
 		}
 		#endregion
